src/main/java/czlab/tecs/p10/JackParser.java
/* JackParser.java */
/* Generated By:JavaCC: Do not edit this line. JackParser.java */
package czlab.tecs.p10;

public class JackParser implements JackParserConstants {

  public String compileOneUnit() throws Exception {
    return this.compileClazz();
  }

  private String strit(Object obj) {
    String s;
    if (obj instanceof Token) {
      s=((Token) obj).image;
    } else {
      s= obj.toString();
    }
    return s;
  }

  private String xrefType(Object obj) {
    if (obj instanceof Token) {
      return vtag("keyword", obj);
    } else {
      return vtag("identifier", obj);
    }
  }

  private String stag(Object obj, boolean b) {
    return "<" + strit(obj) + ">" + (b ? "\u005cn" : "");
  }

  private String stag(Object obj) {
    return stag(obj,true);
  }

  private String etag(Object obj, boolean b) {
    return "</" + strit(obj) + ">" + (b ? "\u005cn" : "");
  }

  private String etag(Object obj) {
    return etag(obj,true);
  }

  private String vtag(Object tag, Object obj) {
    String t= strit(tag);
    String s= strit(obj);
    if ("symbol".equals(t)) {
      if (">".equals(s)) {
        s="&gt;";
      } else if ("<".equals(s)) {
        s="&lt;";
      } else if ("&".equals(s)) {
        s="&amp;";
      }
    }
    return stag(t,false) + s + etag(t, true);
  }

/************************************************
 * THE Jack GRAMMAR SPECIFICATION STARTS HERE *
 ************************************************/
  final public String compileClazz() throws ParseException {StringBuilder bf=new StringBuilder();
  String dv, ds;
  Token cz, cn, lc, rc;
    cz = jj_consume_token(CLASS);
    cn = className();
    lc = jj_consume_token(LCURLY);
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      dv = classVarDec();
//if (bf.length()> 0) { bf.append("\n"); }
    bf.append(dv);
    }
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      ds = subroutineDec();
//if (bf.length()> 0) { bf.append("\n"); }
    bf.append(ds);
    }
    rc = jj_consume_token(RCURLY);
{if ("" != null) return
    stag("class") +
    vtag("keyword", cz) +
    vtag("identifier", cn) +
    vtag("symbol", lc) +
    bf +
    vtag("symbol", rc) +
    etag("class");}
    throw new Error("Missing return statement in function");
  }

//////////////////////////////////////////////////////////////////////////////
//
  final public String classVarDec() throws ParseException {StringBuilder bf=new StringBuilder();
  Object t;
  Token sc, c, v1, vn, q;
    if (jj_2_3(2)) {
      q = jj_consume_token(STATIK);
    } else if (jj_2_4(2)) {
      q = jj_consume_token(FIELD);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    t = type();
    v1 = varName();
    label_3:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_3;
      }
      c = jj_consume_token(COMMA);
      vn = varName();
bf.
    append(vtag("symbol",c)).
    append(vtag("identifier", vn));
    }
    sc = jj_consume_token(SEMICOLON);
{if ("" != null) return stag("classVarDec") +
    vtag("keyword", q) +
    xrefType(t) +
    vtag("identifier", v1) +
    bf +
    vtag("symbol", sc) +
    etag("classVarDec");}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public Object type() throws ParseException {Token t, z;
    if (jj_2_6(2)) {
      t = jj_consume_token(INT);
{if ("" != null) return t;}
    } else if (jj_2_7(2)) {
      t = jj_consume_token(CHAR);
{if ("" != null) return t;}
    } else if (jj_2_8(2)) {
      t = jj_consume_token(BOOLEAN);
{if ("" != null) return t;}
    } else if (jj_2_9(2)) {
      z = className();
{if ("" != null) return z.image;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String subroutineDec() throws ParseException {StringBuilder bf= new StringBuilder();
  String pml, sby;
  Object rt;
  Token ft, sn, lp, rp;
    if (jj_2_10(2)) {
      ft = jj_consume_token(CONSTRUCTOR);
    } else if (jj_2_11(2)) {
      ft = jj_consume_token(FUNCTION);
    } else if (jj_2_12(2)) {
      ft = jj_consume_token(METHOD);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_13(2)) {
      rt = jj_consume_token(VOID);
    } else if (jj_2_14(2)) {
      rt = type();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    sn = subroutineName();
    lp = jj_consume_token(LPAREN);
    pml = parameterList();
    rp = jj_consume_token(RPAREN);
    sby = subroutineBody();
{if ("" != null) return stag("subroutineDec") +
    vtag("keyword", ft) +
    xrefType(rt) +
    vtag("identifier", sn) +
    vtag("symbol", lp) +
    pml +
    vtag("symbol", rp) +
    sby +
    etag("subroutineDec");}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String parameterList() throws ParseException {StringBuilder bf= new StringBuilder();
  Token vn, c, vn99;
  Object t2, t;
    if (jj_2_16(2)) {
      t = type();
      vn = varName();
bf.append(xrefType(t)).
    append(vtag("identifier",vn));
      label_4:
      while (true) {
        if (jj_2_15(2)) {
          ;
        } else {
          break label_4;
        }
        c = jj_consume_token(COMMA);
        t2 = type();
        vn99 = varName();
bf.append(vtag("symbol", c)).
    append(xrefType(t2)).
    append(vtag("identifier", vn99));
      }
    } else {
      ;
    }
{if ("" != null) return stag("parameterList") + bf +
    etag("parameterList");}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String subroutineBody() throws ParseException {StringBuilder bf= new StringBuilder();
  Token lc, rc;
  String v, ss;
    lc = jj_consume_token(LCURLY);
    label_5:
    while (true) {
      if (jj_2_17(2)) {
        ;
      } else {
        break label_5;
      }
      v = varDec();
bf.append(v);
    }
    ss = statements();
    rc = jj_consume_token(RCURLY);
{if ("" != null) return stag("subroutineBody") +
    vtag("symbol", lc) +
    bf + ss +
    vtag("symbol", rc) +
    etag("subroutineBody");}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String varDec() throws ParseException {StringBuilder bf= new StringBuilder();
  Token vn, vn2, v, c, sc;
  Object t;
    v = jj_consume_token(VAR);
    t = type();
    vn = varName();
    label_6:
    while (true) {
      if (jj_2_18(2)) {
        ;
      } else {
        break label_6;
      }
      c = jj_consume_token(COMMA);
      vn2 = varName();
bf.append(vtag("symbol",c)).
      append(vtag("identifier", vn2));
    }
    sc = jj_consume_token(SEMICOLON);
{if ("" != null) return stag("varDec") +
    vtag("keyword",v) +
    xrefType(t) +
    vtag("identifier", vn) +
    bf +
    vtag("symbol", sc) +
    etag("varDec");}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String statements() throws ParseException {StringBuilder bf= new StringBuilder();
  String s;
    label_7:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_7;
      }
      s = statement();
bf.append(s);
    }
{if ("" != null) return stag("statements") + bf +
    etag("statements");}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String statement() throws ParseException {String s;
    if (jj_2_20(2)) {
      s = letStatement();
{if ("" != null) return s;}
    } else if (jj_2_21(2)) {
      s = ifStatement();
{if ("" != null) return s;}
    } else if (jj_2_22(2)) {
      s = whileStatement();
{if ("" != null) return s;}
    } else if (jj_2_23(2)) {
      s = doStatement();
{if ("" != null) return s;}
    } else if (jj_2_24(2)) {
      s = returnStatement();
{if ("" != null) return s;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String letStatement() throws ParseException {StringBuilder bf=new StringBuilder();
  Token vn, l, lb, rb, eq, sc;
  String e1, e2;
    l = jj_consume_token(LET);
    vn = varName();
    if (jj_2_25(2)) {
      lb = jj_consume_token(LBRAC);
      e1 = expr();
      rb = jj_consume_token(RBRAC);
bf.append(vtag("symbol", lb)).
      append(e1).
      append(vtag("symbol", rb));
    } else {
      ;
    }
    eq = jj_consume_token(EQ);
    e2 = expr();
    sc = jj_consume_token(SEMICOLON);
{if ("" != null) return stag("letStatement") +
    vtag("keyword", l) +
    vtag("identifier", vn) +
    bf +
    vtag("symbol", eq) +
    e2 +
    vtag("symbol", sc) +
    etag("letStatement");}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String ifStatement() throws ParseException {Token i, lp, rp, lc, rc, e, lc2, rc2;
  StringBuilder bf=new StringBuilder();
  String ex, ss, ss2;
    i = jj_consume_token(IF);
    lp = jj_consume_token(LPAREN);
    ex = expr();
    rp = jj_consume_token(RPAREN);
    lc = jj_consume_token(LCURLY);
    ss = statements();
    rc = jj_consume_token(RCURLY);
    if (jj_2_26(2)) {
      e = jj_consume_token(ELSE);
      lc2 = jj_consume_token(LCURLY);
      ss2 = statements();
      rc2 = jj_consume_token(RCURLY);
bf.append(vtag("symbol",e)).
    append(vtag("symbol", lc2)).
    append(ss2).
    append(vtag("symbol", rc2));
    } else {
      ;
    }
{if ("" != null) return stag("ifStatement") +
    vtag("keyword",i) +
    vtag("symbol", lp) + ex + vtag("symbol", rp) +
    vtag("symbol", lc) + ss + vtag("symbol", rc) +
    bf +
    etag("ifStatement");}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String whileStatement() throws ParseException {Token w, lp, rp, lc, rc;
  String ss, e;
    w = jj_consume_token(WHILE);
    lp = jj_consume_token(LPAREN);
    e = expr();
    rp = jj_consume_token(RPAREN);
    lc = jj_consume_token(LCURLY);
    ss = statements();
    rc = jj_consume_token(RCURLY);
{if ("" != null) return stag("whileStatement") +
    vtag("keyword", w) +
    vtag("symbol", lp) +
    e +
    vtag("symbol", rp) +
    vtag("symbol", lc) +
    ss +
    vtag("symbol", rc) +
    etag("whileStatement");}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String doStatement() throws ParseException {Token sc, d;
  String s;
    d = jj_consume_token(DO);
    s = subroutineCall();
    sc = jj_consume_token(SEMICOLON);
{if ("" != null) return stag("doStatement") +
    vtag("keyword", d) +
    s +
    vtag("symbol", sc) +
    etag("doStatement");}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String returnStatement() throws ParseException {Token r, sc;
  String e;
    if (jj_2_27(2)) {
      r = jj_consume_token(RETURN);
      sc = jj_consume_token(SEMICOLON);
{if ("" != null) return stag("returnStatement") +
    vtag("keyword", r) +
    vtag("symbol", sc) +
    etag("returnStatement");}
    } else if (jj_2_28(2)) {
      r = jj_consume_token(RETURN);
      e = expr();
      sc = jj_consume_token(SEMICOLON);
{if ("" != null) return stag("returnStatement") +
    vtag("keyword", r) + e +
    vtag("symbol", sc) +
    etag("returnStatement");}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  final public String expr() throws ParseException {StringBuilder bf= new StringBuilder();
  Token p;
  String t1, t5;
    t1 = term();
    label_8:
    while (true) {
      if (jj_2_29(2)) {
        ;
      } else {
        break label_8;
      }
      p = op();
      t5 = term();
bf.append(vtag("symbol",p) + t5);
    }
{if ("" != null) return stag("expression") +
           t1 + bf + etag("expression");}
    throw new Error("Missing return statement in function");
  }
